myproject/CFT/securitygroup-cf.yml
###########################################################################################################
# 
# This template provisions a Security Group
# Created by: Chimene and Pavan 
# Version: 1
# Creation Date: 12/14/2020
# Description : Provisions L4 Security Group for POT-EC2-Redshift
# Ports: 9047, 32010, 31010 
###########################################################################################################
Mappings:
  EnvironmentMap:
    'Enterprise-Non-Prod':
      VPCShortName: 'EnterpriseDev'
      AcctShortName: 'EN'
      VPCId: 'vpc-97847dec'
    'EnterpriseQA':
      VPCShortName: 'EnterpriseQA'
      AcctShortName: 'EQ'
      VPCId: 'vpc-0ec63a8e46bdc0b21'
    'EnterpriseProd':
      VPCShortName: 'EnterpriseProd'
      AcctShortName: 'EP'
      VPCId: 'vpc-0405577f'
Parameters:
  Environment:
    Description: 'Select the environment for which this is being deployed'
    Type: String
    AllowedValues:
      - Enterprise-Non-Prod
      - EnterpriseQA
      - EnterpriseProd
  Purpose:
    Type: String
    Default: L4 Security Group for POT-EC2-Semantic-Layer
  GroupDescription:
    Description: 'Enter a descriptive purpose of this security group'
    Type: String
Resources: 
  EdpL4SGPOTDremio:                                                              
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: 
        Fn::Join:
          - ''
          - - 'L4-EN411-EC2-POT-Semantic-Layer-Dremio'
            - !Join ['', [!FindInMap [EnvironmentMap, Ref: Environment, VPCShortName], '-' , !FindInMap [EnvironmentMap, Ref: Environment, AcctShortName]]]            
      GroupDescription: !Ref Purpose
      SecurityGroupIngress:
       - IpProtocol: TCP
         FromPort: 5617
         ToPort: 5617
         SourceSecurityGroupId: sg-002cfd443268837f2
         Description: Inbound to Redshift

       - CidrIp: 10.142.240.0/20
         Description: Dremio Active Directory Users
         FromPort: 9047
         IpProtocol: tcp
         ToPort: 9047

       - CidrIp: 10.142.240.0/20
         Description: Dremio Active Directory Users
         FromPort: 32010
         IpProtocol: tcp
         ToPort: 32010      

       - CidrIp: 10.142.240.0/20
         Description: Dremio Active Directory Users
         FromPort: 31010
         IpProtocol: tcp
         ToPort: 31010      
         
         
      SecurityGroupEgress:
       - IpProtocol: TCP
         FromPort: 5617
         ToPort: 5617
         DestinationSecurityGroupId: sg-002cfd443268837f2
         Description: Outbound to Redshift
         
       - CidrIp: 10.142.240.0/20
         Description: Connectivity from jump server
         FromPort: 80
         IpProtocol: tcp
         ToPort: 80
 
       - CidrIp: 10.142.240.0/20
         Description: Connectivity from jump server
         FromPort: 443
         IpProtocol: tcp
         ToPort: 443
    
       - CidrIp: 10.142.240.0/20
         Description: POT Active Directory Users
         FromPort: 9047
         IpProtocol: tcp
         ToPort: 9047

       - CidrIp: 10.142.240.0/20
         Description: POT Active Directory Users
         FromPort: 32010
         IpProtocol: tcp
         ToPort: 32010      

       - CidrIp: 10.142.240.0/20
         Description: POT Active Directory Users
         FromPort: 31010
         IpProtocol: tcp
         ToPort: 31010      
         
      Tags:
        - Key: 'Purpose'
          Value: 'L4 Security Group for POT-EC2-Semantic-Layer'
        - Key: 'Name'
          Value: 'L4-EN411-EC2-POT-Semantic-Layer'
        - Key: Tenant Detail
          Value: 'EC001'
      VpcId: 
        !FindInMap [ EnvironmentMap, Ref: Environment, VPCId ]
